
PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4036: Fix e2e failures - JobManagement_3, CmdErrors_3 and BigData_4 (daijy)

PIG-4041: org.apache.pig.backend.hadoop.executionengine.tez.util.MRToTezHelper compiling error (jeagles via cheolsoo)

PIG-4038: SPRINTF should return NULL on any NULL input (mrflip via daijy)

PIG-4025: TestLoadFuncWrapper, TestLoadFuncMetaDataWrapper,TestStoreFuncWrapper
 and TestStoreFuncMetadataWrapper fail on IBM JDK (ahireanup via daijy)

PIG-4024: TestPigStreamingUDF and TestPigStreaming fail on IBM JDK (ahireanup via daijy)

PIG-4023: BigDec/Int sort is broken (ahireanup via daijy)

PIG-4003: Error is thrown by JobStats.getOutputSize() when storing to a Hive table (cheolsoo)

PIG-4035: Fix CollectedGroup e2e tests for tez (daijy)

PIG-4034: Exclude TestTezAutoParallelism when -Dhadoopversion=20 (cheolsoo)

PIG-4033: Fix MergeSparseJoin e2e tests on tez (daijy)

PIG-3478: Make StreamingUDF work for Hadoop 2 (lbendig via daijy)

PIG-4032: BloomFilter fails with s3 path in Hadoop 2.4 (cheolsoo)

PIG-4018: Schema validation fails with UNION ONSCHEMA (daijy)

PIG-4022: Fix tez e2e test SkewedJoin_6 (daijy)

PIG-4001: POPartialAgg aggregates too aggressively when multiple values aggregated (tmwoodruff via cheolsoo)

PIG-4027: Always check for latest Tez snapshot dependencies (lbendig via cheolsoo)

PIG-4020: Fix tez e2e tests MapPartialAgg_[2-4], StreamingPerformance_[6-7] (daijy)

PIG-4019: Compilation broken after TEZ-1169 (daijy)

PIG-4014: Fix Rank e2e test failures on tez (daijy)

PIG-4013: Order by multiple column fail on Tez (daijy)

PIG-3983: TestGrunt.testKeepGoigFailed fail on tez mode (daijy)
