@@ -456,6 +456,11 @@
 # pig.stats.output.size.reader=<fully qualified class name of a PigStatsOutputSizeReader implementation>
 # pig.stats.output.size.reader.unsupported=<comma separated list of StoreFuncs that are not supported by this reader>
 
+# By default, Pig retrieves TaskReports for every launched task to compute
+# various job statistics. But this can cause OOM if the number of tasks is
+# large. In such case, you can disable it by setting this property to true.
+# pig.stats.notaskreport=false
+
 #
 # Override hadoop configs programatically
 #
